--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -30,6 +30,7 @@
   %label{:for => 'search_terms'} Search for movie titles containing: 
   = text_field_tag 'search_terms'
   
-  = submit_tag 'Search TMDb'
+  = submit_tag 'Search TMDb', :id => 'search_button'
+  
   
 = link_to 'Add new movie', new_movie_path
